bugfix/sd-108: added spacing after blog posts in holder.

--- a/src/scss/components/pages.scss
+++ b/src/scss/components/pages.scss
@@ -90,6 +90,14 @@
   display: block;
 }
 
+.page-sidebar-widget {
+  @include media-breakpoint-down(sm) {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
 // News sidebar
 .news-item {
   margin-bottom: 2.5rem;
@@ -158,6 +166,21 @@
 .blog-entry {
   &:first-child h2 {
     margin-top: 1.8rem;
+  }
+}
+
+// Blog holder/page
+.blog-holder__content {
+  margin-bottom: 4rem;
+}
+
+.blog-entry__paginated {
+  margin-bottom: 4rem;
+
+  &:last-child {
+    @include media-breakpoint-up(sm) {
+      margin-bottom: 0;
+    }
   }
 }
 
